--- a/build.gradle
+++ b/build.gradle
@@ -17,9 +17,7 @@ dependencies {
     compile 'org.apache.tinkerpop:gremlin-core:3.1.1-incubating'
     compile 'org.apache.tinkerpop:tinkergraph-gremlin:3.1.1-incubating'
     compile 'com.fasterxml.jackson.core:jackson-databind:2.7.3'
-
-    //    compile 'org.apache.tinkerpop:tinkerpop:3.1.1-incubating'
-    //    compile 'org.apache.tinkerpop:tinkergraph-gremlin:3.1.1-incubating'
+//    compile 'com.thinkaurelius.titan:titan-all:1.0.0'
 }
 
 group = 'org.uirebels.grapheditor'
